--- a/second.html
+++ b/second.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="p5.min.js"></script>
     <script src="p5.sound.js"></script>
-    <script src="home.js" defer></script
+    <script src="second.js" defer></script
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@1,700&display=swap" rel="stylesheet">
